Use Blazor Web (closes #4)

--- a/LinqMarbles.Client/Components/Layout/MainLayout.razor
+++ b/LinqMarbles.Client/Components/Layout/MainLayout.razor
@@ -1,4 +1,5 @@
-﻿@inherits LayoutComponentBase
+﻿@using LinqMarbles.Components.Layout
+@inherits LayoutComponentBase
 <MudThemeProvider/>
 <MudDialogProvider/>
 <MudSnackbarProvider/>
