--- a/LinqMarbles.Client/Pages/Where.razor
+++ b/LinqMarbles.Client/Pages/Where.razor
@@ -1,5 +1,6 @@
 ﻿@page "/"
 @page "/where"
+@attribute [RenderModeInteractiveWebAssembly]
 
 <PageContainer OperatorText="Where(n => n % 2 == 0)">
     <InputPanel>
