--- a/LinqMarbles.Client/Components/_Imports.razor
+++ b/LinqMarbles.Client/Components/_Imports.razor
@@ -4,9 +4,9 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
-@using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using LinqMarbles
-@using LinqMarbles.Components
-@using LinqMarbles.Components.Layout
 @using MudBlazor
+@using LinqMarbles
+@using LinqMarbles.Client
+@using LinqMarbles.Client.Pages
+@using LinqMarbles.Components
