--- a/LinqMarbles.Client/Components/App.razor
+++ b/LinqMarbles.Client/Components/App.razor
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Linq Marbles</title>
+    <title>LINQ Marbles</title>
+    <meta name="description" content="LINQ Marbles - An interactive diagram to visualize LINQ operators" />
     <base href="/" />
     <link rel="stylesheet" href="app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
