PageTitle per operator

--- a/LinqMarbles.Client/Pages/GroupBy.razor
+++ b/LinqMarbles.Client/Pages/GroupBy.razor
@@ -1,4 +1,5 @@
 ﻿@page "/group-by"
+<PageTitle>LINQ Marbles - GroupBy</PageTitle>
 
 <PageContainer OperatorText="GroupBy(o => o.Letter)">
     <InputPanel>
