--- a/LinqMarbles.Client/Pages/Intersect.razor
+++ b/LinqMarbles.Client/Pages/Intersect.razor
@@ -1,4 +1,5 @@
 ﻿@page "/intersect"
+<PageTitle>LINQ Marbles - Intersect</PageTitle>
 
 <PageContainer OperatorText="Intersect()">
     <InputPanel>
