--- a/LinqMarbles.Client/Pages/MaxBy.razor
+++ b/LinqMarbles.Client/Pages/MaxBy.razor
@@ -1,4 +1,5 @@
 ﻿@page "/max-by"
+<PageTitle>LINQ Marbles - MaxBy</PageTitle>
 
 <PageContainer OperatorText="MaxBy(o => o.Letter)">
     <InputPanel>
