--- a/LinqMarbles.Client/Pages/MinBy.razor
+++ b/LinqMarbles.Client/Pages/MinBy.razor
@@ -1,4 +1,5 @@
 ﻿@page "/min-by"
+<PageTitle>LINQ Marbles - MinBy</PageTitle>
 
 <PageContainer OperatorText="MinBy(o => o.Letter)">
     <InputPanel>
