--- a/LinqMarbles.Client/Pages/OrderDescending.razor
+++ b/LinqMarbles.Client/Pages/OrderDescending.razor
@@ -1,4 +1,5 @@
 ﻿@page "/order-descending"
+<PageTitle>LINQ Marbles - OrderDescending</PageTitle>
 
 <PageContainer OperatorText="OrderDescending()">
     <InputPanel>
