--- a/LinqMarbles.Client/Pages/Resources.razor
+++ b/LinqMarbles.Client/Pages/Resources.razor
@@ -1,4 +1,5 @@
 @page "/Resources"
+<PageTitle>LINQ Marbles - Resources</PageTitle>
 <MudText Typo="Typo.h2">Resources</MudText>
 <MudDivider Style="width: 240px"></MudDivider>
 <MudText Class="mt-5">This page contains some more learning resources around the topic <b>LINQ</b>.</MudText>
