--- a/LinqMarbles.Client/Pages/Select.razor
+++ b/LinqMarbles.Client/Pages/Select.razor
@@ -1,4 +1,5 @@
 ﻿@page "/select"
+<PageTitle>LINQ Marbles - Select</PageTitle>
 
 <PageContainer OperatorText="Select(n => n * 2)">
     <InputPanel>
