--- a/LinqMarbles.Client/Pages/SelectMany.razor
+++ b/LinqMarbles.Client/Pages/SelectMany.razor
@@ -1,4 +1,5 @@
 ﻿@page "/select-many"
+<PageTitle>LINQ Marbles - SelectMany</PageTitle>
 
 <PageContainer OperatorText="SelectMany(n => n * 2)">
     <InputPanel>
