--- a/LinqMarbles.Client/Pages/SingleOrDefault.razor
+++ b/LinqMarbles.Client/Pages/SingleOrDefault.razor
@@ -1,4 +1,5 @@
 @page "/single-or-default"
+<PageTitle>LINQ Marbles - SingleOrDefault</PageTitle>
 <PageContainer OperatorText="SingleOrDefault(n => n > 4)">
     <InputPanel>
          @foreach (var marble in _marbles)
