--- a/LinqMarbles.Client/Pages/Where.razor
+++ b/LinqMarbles.Client/Pages/Where.razor
@@ -1,6 +1,7 @@
 ﻿@page "/"
 @page "/where"
 @attribute [RenderModeInteractiveWebAssembly]
+<PageTitle>LINQ Marbles - Where</PageTitle>
 
 <PageContainer OperatorText="Where(n => n % 2 == 0)">
     <InputPanel>
