--- a/LinqMarbles.Client/Pages/First.razor
+++ b/LinqMarbles.Client/Pages/First.razor
@@ -1,4 +1,5 @@
 @page "/first"
+<PageTitle>LINQ Marbles - First</PageTitle>
 <PageContainer OperatorText="First(n => n > 3)">
     <InputPanel>
          @foreach (var marble in _marbles)
