--- a/LinqMarbles.Client/Pages/FirstOrDefault.razor
+++ b/LinqMarbles.Client/Pages/FirstOrDefault.razor
@@ -1,4 +1,5 @@
 @page "/first-or-default"
+<PageTitle>LINQ Marbles - FirstOrDefault</PageTitle>
 <PageContainer OperatorText="FirstOrDefault(n => n > 4)">
     <InputPanel>
          @foreach (var marble in _marbles)
