--- a/LinqMarbles.Client/Pages/Last.razor
+++ b/LinqMarbles.Client/Pages/Last.razor
@@ -1,4 +1,5 @@
 @page "/last"
+<PageTitle>LINQ Marbles - Last</PageTitle>
 <PageContainer OperatorText="Last(n => n > 3)">
     <InputPanel>
          @foreach (var marble in _marbles)
