--- a/LinqMarbles.Client/Pages/LastOrDefault.razor
+++ b/LinqMarbles.Client/Pages/LastOrDefault.razor
@@ -1,4 +1,5 @@
 @page "/last-or-default"
+<PageTitle>LINQ Marbles - LastOrDefault</PageTitle>
 <PageContainer OperatorText="LastOrDefault(n => n > 4)">
     <InputPanel>
          @foreach (var marble in _marbles)
