--- a/LinqMarbles.Client/Pages/Single.razor
+++ b/LinqMarbles.Client/Pages/Single.razor
@@ -1,4 +1,5 @@
 @page "/single"
+<PageTitle>LINQ Marbles - Single</PageTitle>
 <PageContainer OperatorText="Single(n => n > 3)">
     <InputPanel>
          @foreach (var marble in _marbles)
