--- a/LinqMarbles.Client/Components/Layout/MainLayout.razor
+++ b/LinqMarbles.Client/Components/Layout/MainLayout.razor
@@ -6,7 +6,7 @@
 
 <MudLayout>
     <MudAppBar Color="Color.Transparent" Elevation="0" Dense="true">
-        <MudHidden Breakpoint="Breakpoint.MdAndUp">
+        <MudHidden Breakpoint="Breakpoint.MdAndDown" Invert="true">
             <MudIconButton Icon="@Icons.Material.Filled.Menu" Edge="Edge.Start" Color="Color.Inherit" OnClick="@(() => _drawerOpen = !_drawerOpen)"/>
         </MudHidden>
         <MudImage Src="favicon.png" Alt="logo" Width="30"/>
