--- a/LinqMarbles.Client/Components/Layout/NavMenu.razor
+++ b/LinqMarbles.Client/Components/Layout/NavMenu.razor
@@ -41,7 +41,7 @@
         <MudNavLink Href="/select">Select</MudNavLink>
         <MudNavLink Href="/select-many">SelectMany</MudNavLink>
     </MudNavGroup>
-    <MudNavGroup Title="Qualification" Expanded="@true">
+    <MudNavGroup Title="Quantification" Expanded="@true">
         <MudNavLink Href="/all">All</MudNavLink>
         <MudNavLink Href="/any">Any</MudNavLink>
         <MudNavLink Href="/sequence-equal">SequenceEqual</MudNavLink>
