--- a/LinqMarbles.Client/Components/Layout/NavMenu.razor
+++ b/LinqMarbles.Client/Components/Layout/NavMenu.razor
@@ -1,61 +1,45 @@
-﻿<MudNavGroup Title="Operators" Expanded="@true">
-    <MudNavGroup Title="Aggregation" Expanded="@true">
-        <MudNavLink Href="/aggregate">Aggregate</MudNavLink>
-        <MudNavLink Href="/average">Average</MudNavLink>
-        <MudNavLink Href="/count">Count</MudNavLink>
-        <MudNavLink Href="/max">Max</MudNavLink>
-        <MudNavLink Href="/max-by">MaxBy</MudNavLink>
-        <MudNavLink Href="/min">Min</MudNavLink>
-        <MudNavLink Href="/min-by">MinBy</MudNavLink>
-        <MudNavLink Href="/sum">Sum</MudNavLink>
-    </MudNavGroup>
-    <MudNavGroup Title="Concatenation" Expanded="@true">
-        <MudNavLink Href="/concat">Concat</MudNavLink>
-    </MudNavGroup>
-    <MudNavGroup Title="Element" Expanded="@true">
-        <MudNavLink Href="/first">First</MudNavLink>
-        <MudNavLink Href="/first-or-default">FirstOrDefault</MudNavLink>
-        <MudNavLink Href="/last">Last</MudNavLink>
-        <MudNavLink Href="/last-or-default">LastOrDefault</MudNavLink>
-        <MudNavLink Href="/single">Single</MudNavLink>
-        <MudNavLink Href="/single-or-default">SingleOrDefault</MudNavLink>
-    </MudNavGroup>
-    <MudNavGroup Title="Filtering" Expanded="@true">
-        <MudNavLink Href="/distinct">Distinct</MudNavLink>
-        <MudNavLink Href="/skip">Skip</MudNavLink>
-        <MudNavLink Href="/take">Take</MudNavLink>
-        <MudNavLink Href="/where">Where</MudNavLink>
-    </MudNavGroup>
-    <MudNavGroup Title="Grouping" Expanded="@true">
-        <MudNavLink Href="/group-by">GroupBy</MudNavLink>
-    </MudNavGroup>
-    <MudNavGroup Title="Merging" Expanded="@true">
-        <MudNavLink Href="/join">Join</MudNavLink>
-        <MudNavLink Href="/zip">Zip</MudNavLink>
-    </MudNavGroup>
-    <MudNavGroup Title="Order" Expanded="@true">
-        <MudNavLink Href="/order">Order</MudNavLink>
-        <MudNavLink Href="/order-descending">OrderDescending</MudNavLink>
-    </MudNavGroup>
-    <MudNavGroup Title="Projection" Expanded="@true">
-        <MudNavLink Href="/select">Select</MudNavLink>
-        <MudNavLink Href="/select-many">SelectMany</MudNavLink>
-    </MudNavGroup>
-    <MudNavGroup Title="Quantification" Expanded="@true">
-        <MudNavLink Href="/all">All</MudNavLink>
-        <MudNavLink Href="/any">Any</MudNavLink>
-        <MudNavLink Href="/sequence-equal">SequenceEqual</MudNavLink>
-    </MudNavGroup>
-    <MudNavGroup Title="Sequence" Expanded="@true">
-        <MudNavLink Href="/chunk">Chunk</MudNavLink>
-    </MudNavGroup>
-    <MudNavGroup Title="Set" Expanded="@true">
-        <MudNavLink Href="/except">Except</MudNavLink>
-        <MudNavLink Href="/intersect">Intersect</MudNavLink>
-        <MudNavLink Href="/union">Union</MudNavLink>
-    </MudNavGroup>
+﻿@using System.Collections.Frozen
+<MudNavGroup Title="Operators" Expanded="@true">
+    <MudNavLink Match="@NavLinkMatch.All">
+        <MudTextField Variant="Variant.Text" @bind-Value="_searchTerm" Placeholder="Search Operator"
+                      Style="max-width: 90%"/>
+    </MudNavLink>
+
+    @foreach (var group in NavGroups)
+    {
+        var filteredLinks = group.Value.Where(link => link.Contains(_searchTerm, StringComparison.OrdinalIgnoreCase)).ToList();
+        if (filteredLinks.Any())
+        {
+            <MudNavGroup Title="@group.Key" Expanded="@true">
+            @foreach (var link in filteredLinks)
+            {
+                <MudNavLink Href="@FormatLinkHref(link)">@link</MudNavLink>
+            }
+            </MudNavGroup>
+        }
+    }
 </MudNavGroup>
 <MudNavGroup Title="Info">
     <MudNavLink Href="https://github.com/linkdotnet/LINQMarbles" Target="_blank">Source code</MudNavLink>
     <MudNavLink Href="/resources">More resources</MudNavLink>
 </MudNavGroup>
+@code {
+    private string _searchTerm = string.Empty;
+
+    private static readonly FrozenDictionary<string, string[]> NavGroups = new Dictionary<string, string[]>
+    {
+        { "Aggregation", ["Aggregate", "Average", "Count", "Max", "MaxBy", "Min", "MinBy", "Sum"] },
+        { "Concatenation", [ "Concat" ] },
+        { "Element", [ "First", "FirstOrDefault", "Last", "LastOrDefault", "Single", "SingleOrDefault" ] },
+        { "Filtering", [ "Distinct", "Skip", "Take", "Where" ] },
+        { "Grouping", [ "GroupBy" ] },
+        { "Merging", [ "Join", "Zip" ] },
+        { "Order", [ "Order", "OrderDescending" ] },
+        { "Projection", [ "Select", "SelectMany" ] },
+        { "Quantification", [ "All", "Any", "SequenceEqual" ] },
+        { "Sequence", [ "Chunk" ] },
+        { "Set", [ "Except", "Intersect", "Union" ] },
+    }.ToFrozenDictionary();
+
+    private string FormatLinkHref(string link) => "/" + string.Concat(link.Select((c, i) => i > 0 && char.IsUpper(c) ? "-" + c : c.ToString())).ToLower();
+}
