--- a/LinqMarbles.Client/Components/Layout/NavMenu.razor
+++ b/LinqMarbles.Client/Components/Layout/NavMenu.razor
@@ -36,7 +36,7 @@
         { "Merging", [ "Join", "Zip" ] },
         { "Order", [ "Order", "OrderDescending" ] },
         { "Projection", [ "Select", "SelectMany" ] },
-        { "Quantification", [ "All", "Any", "SequenceEqual" ] },
+        { "Quantification", [ "All", "Any", "Contains", "SequenceEqual" ] },
         { "Sequence", [ "Chunk" ] },
         { "Set", [ "Except", "Intersect", "Union" ] },
     }.ToFrozenDictionary();
