--- a/LinqMarbles.Client/Components/Layout/NavMenu.razor
+++ b/LinqMarbles.Client/Components/Layout/NavMenu.razor
@@ -33,7 +33,7 @@
         { "Element", [ "First", "FirstOrDefault", "Last", "LastOrDefault", "Single", "SingleOrDefault" ] },
         { "Filtering", [ "Distinct", "Skip", "Take", "Where" ] },
         { "Grouping", [ "GroupBy" ] },
-        { "Merging", [ "Join", "Zip" ] },
+        { "Merging", [ "GroupJoin", "Join", "Zip" ] },
         { "Order", [ "Order", "OrderDescending" ] },
         { "Projection", [ "Select", "SelectMany" ] },
         { "Quantification", [ "All", "Any", "Contains", "SequenceEqual" ] },
