--- a/LinqMarbles.Client/Pages/Aggregate.razor
+++ b/LinqMarbles.Client/Pages/Aggregate.razor
@@ -1,4 +1,4 @@
-﻿@page "/aggregate"
+﻿@attribute [Route(RouteConstant.Aggregate)]
 <PageTitle>LINQ Marbles - Aggregate</PageTitle>
 
 <PageContainer>
