--- a/LinqMarbles.Client/Pages/All.razor
+++ b/LinqMarbles.Client/Pages/All.razor
@@ -1,4 +1,4 @@
-﻿@page "/all"
+﻿@attribute [Route(RouteConstant.All)]
 <PageTitle>LINQ Marbles - All</PageTitle>
 
 <PageContainer OperatorText="All(n => n < 5)">
