--- a/LinqMarbles.Client/Pages/Any.razor
+++ b/LinqMarbles.Client/Pages/Any.razor
@@ -1,4 +1,4 @@
-﻿@page "/any"
+﻿@attribute [Route(RouteConstant.Any)]
 <PageTitle>LINQ Marbles - Any</PageTitle>
 
 <PageContainer OperatorText="Any(n => n > 4)">
