--- a/LinqMarbles.Client/Pages/Average.razor
+++ b/LinqMarbles.Client/Pages/Average.razor
@@ -1,4 +1,4 @@
-﻿@page "/average"
+﻿@attribute [Route(RouteConstant.Average)]
 <PageTitle>LINQ Marbles - Average</PageTitle>
 
 <PageContainer OperatorText="Average()">
