--- a/LinqMarbles.Client/Pages/Chunk.razor
+++ b/LinqMarbles.Client/Pages/Chunk.razor
@@ -1,4 +1,4 @@
-﻿@page "/chunk"
+﻿@attribute [Route(RouteConstant.Chunk)]
 <PageTitle>LINQ Marbles - Chunk</PageTitle>
 
 <PageContainer OperatorText="Chunk(2)">
