--- a/LinqMarbles.Client/Pages/Concat.razor
+++ b/LinqMarbles.Client/Pages/Concat.razor
@@ -1,4 +1,4 @@
-﻿@page "/concat"
+﻿@attribute [Route(RouteConstant.Concat)]
 <PageTitle>LINQ Marbles - Concat</PageTitle>
 
 <PageContainer OperatorText="Concat()">
