--- a/LinqMarbles.Client/Pages/Contains.razor
+++ b/LinqMarbles.Client/Pages/Contains.razor
@@ -1,4 +1,4 @@
-﻿@page "/contains"
+﻿@attribute [Route(RouteConstant.Contains)]
 <PageTitle>LINQ Marbles - Contains</PageTitle>
 
 <PageContainer OperatorText="Contains(4)">
