--- a/LinqMarbles.Client/Pages/Count.razor
+++ b/LinqMarbles.Client/Pages/Count.razor
@@ -1,4 +1,4 @@
-﻿@page "/count"
+﻿@attribute [Route(RouteConstant.Count)]
 <PageTitle>LINQ Marbles - Count</PageTitle>
 
 <PageContainer OperatorText="Count(n => n > 2)">
