--- a/LinqMarbles.Client/Pages/Distinct.razor
+++ b/LinqMarbles.Client/Pages/Distinct.razor
@@ -1,4 +1,4 @@
-﻿@page "/distinct"
+﻿@attribute [Route(RouteConstant.Distinct)]
 <PageTitle>LINQ Marbles - Distinct</PageTitle>
 
 <PageContainer OperatorText="Distinct()">
