--- a/LinqMarbles.Client/Pages/Except.razor
+++ b/LinqMarbles.Client/Pages/Except.razor
@@ -1,4 +1,4 @@
-﻿@page "/except"
+﻿@attribute [Route(RouteConstant.Except)]
 <PageTitle>LINQ Marbles - Except</PageTitle>
 
 <PageContainer OperatorText="Except()">
