--- a/LinqMarbles.Client/Pages/First.razor
+++ b/LinqMarbles.Client/Pages/First.razor
@@ -1,4 +1,4 @@
-@page "/first"
+@attribute [Route(RouteConstant.First)]
 <PageTitle>LINQ Marbles - First</PageTitle>
 <PageContainer OperatorText="First(n => n > 3)">
     <InputPanel>
