--- a/LinqMarbles.Client/Pages/FirstOrDefault.razor
+++ b/LinqMarbles.Client/Pages/FirstOrDefault.razor
@@ -1,4 +1,4 @@
-@page "/first-or-default"
+@attribute [Route(RouteConstant.FirstOrDefault)]
 <PageTitle>LINQ Marbles - FirstOrDefault</PageTitle>
 <PageContainer OperatorText="FirstOrDefault(n => n > 4)">
     <InputPanel>
