--- a/LinqMarbles.Client/Pages/GroupBy.razor
+++ b/LinqMarbles.Client/Pages/GroupBy.razor
@@ -1,4 +1,4 @@
-﻿@page "/group-by"
+﻿@attribute [Route(RouteConstant.GroupBy)]
 <PageTitle>LINQ Marbles - GroupBy</PageTitle>
 
 <PageContainer OperatorText="GroupBy(o => o.Letter)">
