--- a/LinqMarbles.Client/Pages/GroupJoin.razor
+++ b/LinqMarbles.Client/Pages/GroupJoin.razor
@@ -1,4 +1,4 @@
-@page "/group-join"
+@attribute [Route(RouteConstant.GroupJoin)]
 <PageTitle>LINQ Marbles - GroupJoin</PageTitle>
 
 <PageContainer>
