--- a/LinqMarbles.Client/Pages/Intersect.razor
+++ b/LinqMarbles.Client/Pages/Intersect.razor
@@ -1,4 +1,4 @@
-﻿@page "/intersect"
+﻿@attribute [Route(RouteConstant.Intersect)]
 <PageTitle>LINQ Marbles - Intersect</PageTitle>
 
 <PageContainer OperatorText="Intersect()">
