--- a/LinqMarbles.Client/Pages/Last.razor
+++ b/LinqMarbles.Client/Pages/Last.razor
@@ -1,4 +1,4 @@
-@page "/last"
+@attribute [Route(RouteConstant.Last)]
 <PageTitle>LINQ Marbles - Last</PageTitle>
 <PageContainer OperatorText="Last(n => n > 3)">
     <InputPanel>
