--- a/LinqMarbles.Client/Pages/LastOrDefault.razor
+++ b/LinqMarbles.Client/Pages/LastOrDefault.razor
@@ -1,4 +1,4 @@
-@page "/last-or-default"
+@attribute [Route(RouteConstant.LastOrDefault)]
 <PageTitle>LINQ Marbles - LastOrDefault</PageTitle>
 <PageContainer OperatorText="LastOrDefault(n => n > 4)">
     <InputPanel>
