--- a/LinqMarbles.Client/Pages/Max.razor
+++ b/LinqMarbles.Client/Pages/Max.razor
@@ -1,4 +1,4 @@
-﻿@page "/max"
+﻿@attribute [Route(RouteConstant.Max)]
 <PageTitle>LINQ Marbles - Max</PageTitle>
 
 <PageContainer OperatorText="Max()">
