--- a/LinqMarbles.Client/Pages/MaxBy.razor
+++ b/LinqMarbles.Client/Pages/MaxBy.razor
@@ -1,4 +1,4 @@
-﻿@page "/max-by"
+﻿@attribute [Route(RouteConstant.MaxBy)]
 <PageTitle>LINQ Marbles - MaxBy</PageTitle>
 
 <PageContainer OperatorText="MaxBy(o => o.Letter)">
