--- a/LinqMarbles.Client/Pages/Min.razor
+++ b/LinqMarbles.Client/Pages/Min.razor
@@ -1,4 +1,4 @@
-﻿@page "/min"
+﻿@attribute [Route(RouteConstant.Min)]
 <PageTitle>LINQ Marbles - Min</PageTitle>
 
 <PageContainer OperatorText="Min()">
