--- a/LinqMarbles.Client/Pages/MinBy.razor
+++ b/LinqMarbles.Client/Pages/MinBy.razor
@@ -1,4 +1,4 @@
-﻿@page "/min-by"
+﻿@attribute [Route(RouteConstant.MinBy)]
 <PageTitle>LINQ Marbles - MinBy</PageTitle>
 
 <PageContainer OperatorText="MinBy(o => o.Letter)">
