--- a/LinqMarbles.Client/Pages/Order.razor
+++ b/LinqMarbles.Client/Pages/Order.razor
@@ -1,4 +1,4 @@
-﻿@page "/order"
+﻿@attribute [Route(RouteConstant.Order)]
 <PageTitle>LINQ Marbles - Order</PageTitle>
 
 <PageContainer OperatorText="Order()">
