--- a/LinqMarbles.Client/Pages/OrderDescending.razor
+++ b/LinqMarbles.Client/Pages/OrderDescending.razor
@@ -1,4 +1,4 @@
-﻿@page "/order-descending"
+﻿@attribute [Route(RouteConstant.OrderDescending)]
 <PageTitle>LINQ Marbles - OrderDescending</PageTitle>
 
 <PageContainer OperatorText="OrderDescending()">
