--- a/LinqMarbles.Client/Pages/SelectMany.razor
+++ b/LinqMarbles.Client/Pages/SelectMany.razor
@@ -1,4 +1,4 @@
-﻿@page "/select-many"
+﻿@attribute [Route(RouteConstant.SelectMany)]
 <PageTitle>LINQ Marbles - SelectMany</PageTitle>
 
 <PageContainer OperatorText="SelectMany(n => n * 2)">
