--- a/LinqMarbles.Client/Pages/Single.razor
+++ b/LinqMarbles.Client/Pages/Single.razor
@@ -1,4 +1,4 @@
-@page "/single"
+@attribute [Route(RouteConstant.Single)]
 <PageTitle>LINQ Marbles - Single</PageTitle>
 <PageContainer OperatorText="Single(n => n > 3)">
     <InputPanel>
