--- a/LinqMarbles.Client/Pages/SingleOrDefault.razor
+++ b/LinqMarbles.Client/Pages/SingleOrDefault.razor
@@ -1,4 +1,4 @@
-@page "/single-or-default"
+@attribute [Route(RouteConstant.SingleOrDefault)]
 <PageTitle>LINQ Marbles - SingleOrDefault</PageTitle>
 <PageContainer OperatorText="SingleOrDefault(n => n > 4)">
     <InputPanel>
