--- a/LinqMarbles.Client/Pages/Skip.razor
+++ b/LinqMarbles.Client/Pages/Skip.razor
@@ -1,4 +1,4 @@
-﻿@page "/skip"
+﻿@attribute [Route(RouteConstant.Skip)]
 <PageTitle>LINQ Marbles - Skip</PageTitle>
 
 <PageContainer OperatorText="Skip(2)">
