--- a/LinqMarbles.Client/Pages/Sum.razor
+++ b/LinqMarbles.Client/Pages/Sum.razor
@@ -1,4 +1,4 @@
-﻿@page "/sum"
+﻿@attribute [Route(RouteConstant.Sum)]
 <PageTitle>LINQ Marbles - Sum</PageTitle>
 
 <PageContainer OperatorText="Sum()">
