--- a/LinqMarbles.Client/Pages/Take.razor
+++ b/LinqMarbles.Client/Pages/Take.razor
@@ -1,4 +1,4 @@
-﻿@page "/take"
+﻿@attribute [Route(RouteConstant.Take)]
 <PageTitle>LINQ Marbles - Take</PageTitle>
 
 <PageContainer OperatorText="Take(2)">
