--- a/LinqMarbles.Client/Pages/Union.razor
+++ b/LinqMarbles.Client/Pages/Union.razor
@@ -1,4 +1,4 @@
-﻿@page "/union"
+﻿@attribute [Route(RouteConstant.Union)]
 <PageTitle>LINQ Marbles - Union</PageTitle>
 
 <PageContainer OperatorText="Union()">
