--- a/LinqMarbles.Client/Pages/Index.razor
+++ b/LinqMarbles.Client/Pages/Index.razor
@@ -8,10 +8,10 @@
             <MudCard>
                 <MudCardContent>
                     <MudText>@route.GetPathTitle()</MudText>
-                    <MudText Typo="Typo.body2">Description</MudText>
+                    <MudText Typo="Typo.body2">The quick, brown fox jumps over a lazy dog.</MudText>
                 </MudCardContent>
                 <MudCardActions>
-                    <MudLink Href="@route.ToLower()">Read</MudLink>
+                    <MudButton Href="@route.ToLower()" Variant="Variant.Text" Color="Color.Primary">Learn More</MudButton>
                 </MudCardActions>
             </MudCard>
         </MudItem>
