Remove index route from where page

--- a/LinqMarbles.Client/Pages/Where.razor
+++ b/LinqMarbles.Client/Pages/Where.razor
@@ -1,5 +1,4 @@
-﻿@page "/"
-@page "/where"  
+﻿@page "/where"  
 <PageTitle>LINQ Marbles - Where</PageTitle>
 
 <PageContainer OperatorText="Where(n => n % 2 == 0)">
